--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,10 +4,18 @@ phases:
   install:
     runtime-versions:
       python: 3.8
+    commands:
+      - echo "Installing Terraform"
+      - curl -O https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip
+      - unzip terraform_1.5.7_linux_amd64.zip
+      - mv terraform /usr/local/bin/
+      - terraform -version
+
   pre_build:
     commands:
       - echo "Starting Terraform Init"
       - terraform init
+
   build:
     commands:
       - echo "Running Terraform Apply"
